--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "lodash": "^4.17.4",
+    "twilio": "^3.0.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
