--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A test program to experiment with NodeJS",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^4.0.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "twilio": "^3.0.0",
     "underscore": "^1.8.3"
