--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "express": "^4.15.3",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "twilio": "^3.0.0",
